--- a/templates/about.html
+++ b/templates/about.html
@@ -86,7 +86,7 @@
         <h2>Meet the Team</h2>
         <div class="team-members">
           <div class="team-member">
-            <img src="static\anirudh.jpg" alt="Team Member 1">
+            <img src="static\profile.jpeg" alt="Team Member 1">
             <h3>Anirudh Agrawal</h3>
             <p>Frontend & Backend Developer</p>
           </div>
